<resources>
    <string name="app_name">Speed Delivery</string>
    <string name="phone_hint">Civil id</string>
    <string name="password_hint">Password</string>
    <string name="continue_button">Continue</string>
    <string name="login_button">Login</string>

    <string name="google_map_key">AIzaSyB-Hf679HZ0J0goszU6XY52wJhbTwR9FS8</string>
    <string name="home_menu_item">Home</string>
    <string name="orders_menu_item">Order</string>
    <string name="payments_menu_item">Payments</string>
    <string name="client_places_menu_item">Client Places</string>
    <string name="contact_us_menu_item">Contact Us</string>
    <string name="notifications_menu_item">Notifications</string>
    <string name="title_pickup_location">Pickup Location</string>
    <string name="title_destination_location">Destination Location</string>
    <string name="goThere">GO THERE</string>
    <string name="address">address</string>
    <string name="expectedTime">Expected Time</string>
    <string name="order_calculated_distance">%.2f Km - %s</string>
    <string name="you_have_reached_your_destination">You have reached your destination</string>
    <string name="warnings_label">Warnings</string>
    <string name="label_amount_required">Amount required</string>
    <string name="currency">kwd</string>
    <string name="detailed_location">%s - %s</string>
    <string name="order_report_menu_item">Order Report</string>
    <string name="help_menu_item">Help</string>
    <string name="governate">"Governorate : </string>
    <string name="region">Region : </string>
    <string name="street">Street : </string>
    <string name="block">Block : </string>
    <string name="home_no">"Home No : </string>
    <string name="apartment">"Apartment No: </string>
    <string name="customer_name">Customer Name</string>
    <string name="order_counts">Orders count</string>
    <string name="amount">Amount \nUnpaid</string>
    <string name="kwd">Kwd</string>
    <string name="pickup_has_been_reached">Your Pickup has been reached</string>
    <string name="order_image">Order image</string>
    <string name="ordr_pickup">order pick up</string>
    <string name="pay_now">Pay Now</string>
    <string name="cancel">CANCELLING ORDER</string>
    <string name="order_details">Order Details</string>
    <string name="order_details_value">"When one door of happiness closes, another opens, but often we look so long at the closed door that we do not see the one that has been opened for us. "</string>
    <string name="order_normal">Order Normal</string>
    <string name="status_compelete">Complete</string>
    <string name="destination_reached">Your Destination Location has been reached</string>
    <string name="complete">Complete</string>
    <string name="order_compelete_successfully">Order Completed Successfully\n</string>
    <string name="order_canceled">Order is Canceled</string>
    <string name="camera_option">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cant_add_image">You Can\'t Add Image .</string>
    <string name="call">Call</string>
    <string name="amount_new">Amount</string>
    <string name="floor_no">Floor No:</string>
    <string name="destionation_reached">Destionation Reached</string>
    <string name="extra_price">extra Price</string>
    <string name="run_sheet">Runsheet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_no">Label NO</string>
    <string name="shipment_number">Shipments: %s</string>
    <string name="reschdule_number">Reschedule: %s</string>
    <string name="rejected_number">Reject: %s</string>
    <string name="delivered_number">Delivered: %s</string>
    <string name="noresult">No Result Found</string>
    <string name="shipment">Shipments</string>
    <string name="delivered">Delieverd</string>
    <string name="reschuled">Reschduled</string>
    <string name="rejected">Rejected</string>
    <string name="delivery_start">Delivery Slot: %s</string>
    <string name="delivery_date">Delivery Date: %s</string>
    <string name="delivery_address">Delivery Address: %s</string>
    <string name="mobile_number">Mobile NO: %S</string>
    <string name="start">Start</string>
    <string name="shipment_from">Shipment From</string>
    <string name="shipment_details">Shipment Details</string>
    <string name="shipment_address">Shipment Address</string>
    <string name="note">Notes</string>
    <string name="reschule">Reschdule</string>
    <string name="reject">Reject</string>
    <string name="select_reason">Select a Reason</string>
    <string name="confirm">Confirm</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="choose_language">Choose Language</string>
    <string name="slots">Slot</string>
    <string name="log_out">Log Out</string>
    <string name="setting">Settings</string>
    <string name="phone_number">Phone</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="change_pas">Change Password</string>
    <string name="change_lang">Change Language</string>
    <string name="contact_admin">Contact the admin</string>
    <string name="road_service">Road Service</string>
    <string name="orders">Orders</string>

</resources>