<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp"

    android:layout_height="match_parent"
    tools:context=".ui.auth.settings.language.LanguageFragment">

    <TextView
        android:id="@+id/back"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:drawablePadding="15dp"
        android:text="@string/language"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/ic_baseline_arrow_back_24"
        app:drawableTint="@color/black" />


    <TextView
        android:textColor="@color/new_red_color"
        android:text="@string/choose_language"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:minHeight="45dp"
        app:cardElevation="0dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/card_color"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/containerEnglish"
            android:minHeight="60dp"
            android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="15dp"
            android:text="@string/english"
            android:id="@+id/english"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/englishCheck"
                android:layout_marginEnd="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:minHeight="45dp"
        app:cardElevation="0dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/card_color"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/containerArabic"
        android:minHeight="60dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="15dp"
            android:text="@string/arabic"
            android:id="@+id/arabic"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/arabicCheck"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>