<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:contentInsetRight="0dp"
        app:contentInsetLeft="0dp"
        android:gravity="center_vertical"
        app:contentInsetStartWithNavigation="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:drawablePadding="5dp"
        android:text="@string/setting"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/dark_color"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:title="Orders"
        app:titleTextAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:titleTextColor="@color/blue"
        app:drawableStartCompat="@drawable/ic_baseline_arrow_back_24"
        app:drawableTint="@android:color/darker_gray" />

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/cardImage"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_width="100dp"
        android:layout_height="100dp">
        <ImageView
            android:scaleType="fitXY"
            android:src="@color/gray_light"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/userName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/new_color_green"
        app:layout_constraintTop_toBottomOf="@+id/cardImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="10dp"
        app:cardElevation="5dp"
        android:minHeight="40dp"
        android:id="@+id/changePassContainer"
        android:layout_marginHorizontal="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginHorizontal="5dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:drawablePadding="2dp"
            android:textColor="@color/black"
            android:text="@string/change_pas"
            android:layout_height="30dp"
            app:drawableStartCompat="@drawable/ic_change_password" />

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="15dp"
        app:cardElevation="5dp"
        android:minHeight="40dp"
        android:id="@+id/changeLangContainer"
        android:layout_marginHorizontal="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/changePassContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginHorizontal="5dp"
            android:gravity="center_vertical"
            android:drawablePadding="2dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:text="@string/change_lang"
            android:layout_height="30dp"
            app:drawableStartCompat="@drawable/ic_change_language" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="15dp"
        app:cardElevation="5dp"
        android:minHeight="40dp"
        android:id="@+id/contactAdminContainer"
        android:layout_marginHorizontal="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/changeLangContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginHorizontal="5dp"
            android:gravity="center_vertical"
            android:drawablePadding="2dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:text="@string/contact_admin"
            android:layout_height="30dp"
            app:drawableStartCompat="@drawable/ic_call_setting" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="15dp"
        app:cardElevation="5dp"
        android:minHeight="40dp"
        android:id="@+id/roadSideServiceContainer"
        android:layout_marginHorizontal="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/contactAdminContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginHorizontal="5dp"
            android:gravity="center_vertical"
            android:drawablePadding="2dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:text="@string/road_service"
            android:layout_height="30dp"
            app:drawableStartCompat="@drawable/ic_road_service" />

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="15dp"
        app:cardElevation="5dp"
        android:minHeight="40dp"
        android:id="@+id/logOutContainer"
        android:layout_marginHorizontal="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/roadSideServiceContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginHorizontal="5dp"
            android:gravity="center_vertical"
            android:drawablePadding="2dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:text="@string/log_out"
            android:layout_height="30dp"
            app:drawableStartCompat="@drawable/ic_log_out" />

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>