<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="0dp"
    android:layout_marginTop="20dp"
    app:cardCornerRadius="10dp"
    app:strokeWidth="1dp"
    app:strokeColor="@color/gray_light"
    android:layout_height="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:minHeight="100dp"
    android:id="@+id/containerSlots"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/slotIcon"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        app:srcCompat="@drawable/ic_slot"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/slotName"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        tools:text="adsdadfaf"
        app:layout_constraintStart_toEndOf="@+id/slotIcon"
        app:layout_constraintTop_toTopOf="@+id/slotIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/slotTime"
        android:textColor="@color/black"
        tools:text="saddasd"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/slotIcon"
        app:layout_constraintTop_toBottomOf="@+id/slotName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/arrowIcon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginTop="10dp"
        android:id="@+id/divider"
        android:background="@color/gray_light"
        app:layout_constraintTop_toBottomOf="@+id/slotIcon"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:background="@color/new_gray_color"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:orientation="horizontal"
        android:minHeight="30dp"
        android:paddingHorizontal="10dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:id="@+id/shipment"
            android:textSize="11sp"
            android:text="@string/shipment_number"
            android:drawablePadding="3dp"
            android:drawableStart="@drawable/shipment_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/delivered"
            android:layout_weight="1"
            android:textSize="11sp"
            android:text="@string/delivered_number"
            android:drawablePadding="3dp"
            android:drawableStart="@drawable/ic_delivered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/reject"
            android:layout_weight="1"
            android:text="@string/rejected_number"
            android:drawablePadding="3dp"
            android:textSize="11sp"
            android:drawableStart="@drawable/ic_rejected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/reschdule"
            android:layout_weight="1"
            android:textSize="11sp"
            android:text="@string/reschdule_number"
            android:drawablePadding="3dp"
            android:drawableStart="@drawable/ic_reschdule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>