<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:minHeight="100dp"
    android:layout_marginTop="15dp"
    android:layout_marginHorizontal="10dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/card_color"
    android:layout_height="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:minHeight="100dp"
    android:id="@+id/containerSlot"
    android:paddingBottom="10dp"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:id="@+id/header_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:minHeight="40dp"
        android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView
            android:scaleType="fitXY"
            style="@style/card_provider"
            app:cardElevation="0dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/new_gray_border"
            android:minHeight="40dp"
            app:cardBackgroundColor="@color/new_gray_color"
            android:id="@+id/titleImageHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/name"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/black_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"
            android:text="orderName"
            android:id="@+id/shipmentNumber"
            android:textColor="@color/black_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/delivery_slot"
        android:text="@string/delivery_start"
        android:id="@+id/delivery_slot"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/dateString"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/dateString"
        android:drawableStart="@drawable/ic_callender"
        android:text="@string/delivery_date"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:drawableStart="@drawable/ic_location_new"
        android:text="@string/delivery_address"
        android:id="@+id/deliveryAddress"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="@+id/dateString"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivery_slot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:drawableStart="@drawable/ic_mobile_number"
        android:text="@string/mobile_number"
        android:layout_marginTop="5dp"
        android:id="@+id/mobileNumber"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/dateString"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliveryAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>